# ENet-CSharp

./: .gitmodules  CMakeLists.txt  Directory.Build.props  ENet-CSharp.sln
Build-iOS/: CMakeLists.txt
MSBuild/ENetCSharp/: ENetCSharp.csproj
MSBuild/ENetTests/: ENetTests.GenCerts.targets  ENetTests.csproj  UnitTests.cs
MSBuild/OpenSSL/: OpenSSL.Build.targets  OpenSSL.Copy.targets  OpenSSL.csproj
Source/Managed/: ENet.cs
Source/Native/: CMakeLists.txt  enet.h
Source/Native/custom/: enet_logging.h
Source/Native/jni/: Android.mk
tools/: build_all.bat  build_android.bat  build_linux.bat  build_mac.bat  build_windows.bat  find_vcvarsall.bat
